--- a/spring-boot-cloud/config-service/src/main/resources/application.properties
+++ b/spring-boot-cloud/config-service/src/main/resources/application.properties
@@ -3,7 +3,5 @@ eureka.client.fetch-registry=true
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 eureka.instance.hostname=localhost
 server.port=8888
-spring.application.name=PAYMENT-SERVICE
-
-spring.cloud.config.uri=http://localhost:8888
-#http://localhost:8888/application/default
+spring.application.name=CONFIG-SERVICE
+spring.cloud.config.server.git.uri={url}
